--- a/src/components/pages/Home/Home/Home.css
+++ b/src/components/pages/Home/Home/Home.css
@@ -5,6 +5,12 @@
     padding: 10px;
 }
 
+.link {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 @media screen and (max-width: 650px) {
     .items {
         grid-template-columns: repeat(1, 1fr);
